--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=http://ec2-18-182-30-186.ap-northeast-1.compute.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=new_website
+DB_DATABASE=shopwebsite
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Ambuj@12345
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
