--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=http://ec2-18-182-30-186.ap-northeast-1.compute.amazonaws.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=shopwebsite
 DB_USERNAME=root
