--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=ec2-18-182-30-186.ap-northeast-1.compute.amazonaws.com
+APP_URL=127.0.0.1
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -22,9 +22,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=ec2-18-182-30-186.ap-northeast-1.compute.amazonaws.com
+MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=ec2-18-182-30-186.ap-northeast-1.compute.amazonaws.com
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
