--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:I/ssWkMNYYYZ4atHomWVXKw/SEFAjy5C0zIcbgpargM=
 APP_DEBUG=true
-APP_URL=127.0.0.1
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
